added first attempt to make calls to server: get products list, repository added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProductsList</string>
+
+    <string name="generic_error_message">An error occurred retrieving dta from server</string>
 </resources>
