--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">ProductsList</string>
+    <string name="app_name">Sowingo App</string>
 
     <string name="generic_error_message">An error occurred retrieving dta from server</string>
 
     <string name="price_label">$%1$s</string>
+    <string name="products_label">Products</string>
 </resources>
