minor changes: added hint to SearchView and Badge to product

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="price_label">$%1$s</string>
     <string name="products_label">Products</string>
+    <string name="search_hint">Search Product Name, Sku, Keyword…</string>
+    <string name="best_seller">best seller</string>
 
     <!-- error messages -->
     <string name="generic_error_message">An error occurred retrieving data from server</string>
