--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,13 @@
     <string name="products_label">Products</string>
     <string name="search_hint">Search Product Name, Sku, Keyword…</string>
     <string name="best_seller">best seller</string>
+    <string name="filter_title">Filter products</string>
+
+    <string-array name="filter_values">
+        <item>Favorite</item>
+        <item>No Favorite</item>
+        <item>All</item>
+    </string-array>
 
     <!-- error messages -->
     <string name="generic_error_message">An error occurred retrieving data from server</string>
